Implemented auth-service login api and included in gateway and swagger